docs/archive/legacy-manifests/nginx-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-test
spec:
  selector:
    app: nginx
  ports:
    - name: http
      targetPort: 80
      port: 80
